# refute

./: .gitignore  .golangci.yml  .shatterignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ERRORS.md  INSTALL.md  Makefile  README.md  go.mod  go.sum  hdeh8ikqumiinucalfvo9ftlu4j2rdtu.darc  manifest  shatter.config.json
.beads/: .gitignore  issues.jsonl  metadata.json
.github/workflows/: ci.yml  nightly.yml  release.yml
.launch-work/: log.md
.shatter/: config.yaml
adapters/cargo/: Cargo.toml
adapters/jvm/: pom.xml
adapters/npm/: package.json
adapters/openrewrite/: pom.xml
adapters/python/: pyproject.toml
adapters/python/src/refute_tool/: __init__.py  cli.py
adapters/python/tests/: test_cli.py
adapters/tsmorph/: contract.test.cjs  eslint.config.cjs  go.mod  package-lock.json  package.json  rename.cjs  rename.test.cjs  (+1 more)
docs/: README.md  corpus.md  current-state.md  drift-control.md  issue-backlog.md  json-schema.md  lsp-landscape.md  position-encoding.md  project-goals.md  release-readiness.md  release-verification.md  release.md  roadmap.md  shatter-lsp-client-parameters.md  support-matrix.md  versioning.md
internal/: golden_test.go  integration_go_test.go  integration_helpers_test.go  integration_java_test.go  integration_javascript_test.go  integration_json_test.go  integration_listsymbols_test.go  integration_policy_test.go  integration_rust_test.go  integration_test.go  integration_typescript_test.go  shatter_setup_test.go  verify_script_test.go
scripts/: corpus-fetch.sh  install-nightly.sh  release.sh  shim-conformance.sh  verify.sh
(+231 files in other folders)
