[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refute-tool"
version = "0.0.0.dev0"
description = "Registryless Python shim for the shared refute toolchain"
requires-python = ">=3.9"
license = "Apache-2.0"

[project.scripts]
refute = "refute_tool.cli:refute"
refute-tool = "refute_tool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
